# shares3

./: README.md  pyproject.toml
html/: testdir1.html
shares3/: presigner.py  render.py  utils.py
templetes/: template.jinja
tests/: test_presigner.py  test_render.py
